# python-package

./: pyproject.toml
src/mypackage/: __init__.py
