[project]
name = "mypackage"
version = "0.1.0"
description = ""
authors = [
    {name = "Jingshao Chen", email = "jingshaochen@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
